<resources>
    <string name="app_name">Learning Unit</string>
    <string name="Play">Spielen</string>
    <string name="Learn">Lernen</string>
    <string name="Organizer">Organizer</string>
    <string name="Timetable">Stundenplan</string>
    <string name="Statistics">Statistiken</string>
    <string name="Settings">Einstellungen</string>
    <string name="Vocabularys">Vokabeln</string>
    <string name="ChangeLanguage">Sprache Ändern</string>
    <string name="Logout">Logout</string>
    <string name="DeleteAccount">Account Löschen</string>
    <string name="ChangeStyle">Dark Mode</string>
    <string name="Credentials">E M A I L / B E N U T Z E R N A M E</string>
    <string name="Password">P A S S W O R T</string>
    <string name="Login">L O G I N</string>
    <string name="CreateAccount">Konto erstellen</string>
    <string name="ContinueLogin">Ohne Konto fortfahren</string>
    <string name="login_decline">Nein, danke</string>
    <string name="Ok">Ok</string>
    <string name="Back">Zurück</string>
    <string name="Continue">Fortfahren</string>
    <string name="app_name0">L E A R N I N G  U N I T</string>
    <string name="German">Deutsch</string>
    <string name="English">Englisch</string>
    <string name="ChangeLanguageQuestion">Sprache Ändern?</string>
    <string name="ChangeLanguageQuestion1">"Bist du sicher, dass du die Sprache zu "</string>
    <string name="ChangeLanguageQuestion2">ändern willst?</string>
    <string name="ChangeLanguageQuestion3">Ja, Sprache ändern</string>
    <string name="Cancel">Abbrechen</string>
    <string name="ColourSwitchText0">"Diese Farbe immer für "</string>
    <string name="ColourSwitchText1">" verwenden?"</string>
    <string name="ColourCooseText">"Wähle eine Farbe für "</string>
    <string name="Hour">" Stunde"</string>
    <string name="Next">Weiter</string>
    <string name="Day">Tag</string>
    <string name="NameOfDay">Name des Tages</string>
    <string name="Monday">Montag</string>
    <string name="Tuesday">Dienstag</string>
    <string name="Wednesday">Mittwoch</string>
    <string name="Thursday">Donnerstag</string>
    <string name="Friday">Freitag</string>
    <string name="Saturday">Samstag</string>
    <string name="Sunday">Sonntag</string>
    <string name="CustomHourName">Benutzerdefinierter Stundenname</string>
    <string name="SuggestedHoursNames">Vorgeschlagene Stunden Namen</string>
    <string name="CreateTimetable">Stundenplan Erstellen</string>
    <string name="Share">Teilen</string>
    <string name="ChangeTimetable">Neuer Stundenplan</string>
    <string name="NoHomeWork">Keine Hausaufgaben</string>
    <string name="Wochenüberblick">Wochenüberblick</string>
    <string name="HourNameError">Eine Stundenname darf aus max. 15 Zeichen bestehen!</string>
    <string name="TimetableImport">Importieren</string>
    <string name="DayCount">Anzahl Tage</string>
    <string name="HourCount">Anzahl max. Stunden</string>
    <string name="Week">Woche</string>
    <string name="NewTimetableQuestion">Neuen Stundenplan erstellen?</string>
    <string name="NewTimetableQuestion1">Dein aktueller Stundenplan geht dadurch verloren</string>
    <string name="NoNetworkConnection">Keine Netzwerkverbindung</string>
    <string name="NoNetworkInfo">Es ist eine Internetverbindung erforderlich, um diese Aktion auszuführen.</string>
    <string name="TryAgain">Erneut versuchen</string>
    <string name="DelOfflineData">Offline Daten löschen</string>
    <string name="LoginRegister">Anmelden / Registrieren</string>
    <string name="AccountNeeded">Account erforderlich</string>
    <string name="PublicVocabInfo">Du musst einen Account verwenden, um auf Öffentliche Vokabellisten zugreifen zu können.</string>
    <string name="TimetableShareInfo">Du musst einen Account verwenden, um deinen Stundenplan zu teilen.</string>
    <string name="TimetableID">Stundenplan ID</string>
    <string name="TimetableIDInfo">Teile diese ID, damit andere deinen Stundenplan kopieren können</string>
    <string name="CopyID">ID in die Zwischenablage kopieren</string>
    <string name="CopyMessage">" wurde in die Zwischenablage kopiert"</string>
    <string name="CreateNewTimetable">Neuen Stundenplan erstellen</string>
    <string name="LoadSharedTimetable">Geteilten Stundenplan laden</string>
    <string name="TimetableEnterID">Gebe deine erhaltene ID ein, um den entsprechenden Stundenplan zu laden</string>
    <string name="LoadTimetable">Stundenplan laden</string>
    <string name="ErrorOccurred">Ein Fehler ist aufgetreten, bitte überprüfe deine Eingabe</string>
    <string name="NoTimetableFound">Unter dieser ID wurde kein Stundenplan gefunden</string>
    <string name="NoValueEntered">Bitte gebe einen Wert an</string>
    <string name="TimetableReceiveShareInfo">Du musst einen Account verwenden, um einen geteilten Stundenplan zu laden.</string>
    <string name="title_activity_organizer">Organizer</string>
    <string name="title_home">Start</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="New">Neu</string>
    <string name="Calendar">Kalender</string>
    <string name="Homework">Hausaufgaben</string>
    <string name="Exam">Arbeiten</string>
    <string name="Notes">Notizen</string>
    <string name="Pictures">Bilder</string>
    <string name="Events">Termine</string>
    <string name="NextEvent">Nächstes Event</string>
    <string name="DutyDate">Abgabe Datum</string>
    <string name="EnterNewHomework">Neue Hausaufgabe eintragen</string>
    <string name="InvalidDate">Ungültiges Datum</string>
    <string name="Titel">Titel</string>
    <string name="Description">Beschreibung</string>
    <string name="ChooseHour">Stunde auswählen</string>
    <string name="NoHourNameChosen">Keinen Stundennamen gewählt</string>
    <string name="EmptyField">Dieses feld darf nicht leer sein</string>
    <string name="NoTimetableCreated">Richte dir einen Stundenplan ein, um auf diese Stundenbezeichnungen zugreifen zu können.</string>
    <string name="Finish">Fertigstellen</string>
    <string name="Overview">Überblick</string>
    <string name="Date">Datum</string>
    <string name="InsertHomework">Hausaufgabe eintragen</string>
    <string name="HomeworkOverview">Alle Hausaufgaben</string>
    <string name="NoHomeworkEntered">Du hast noch keine Hausaufgaben eingetragen</string>
    <string name="CreateNow">Jetzt erstellen!</string>
    <string name="Done">Erledigt</string>
    <string name="NotDone">Nicht Erledigt</string>
    <string name="ExamOverview">Arbeiten übersicht</string>
    <string name="EnterNewExam">Neue Arbeit eintragen</string>
    <string name="EnterNewNote">Neue Notiz eintragen</string>
    <string name="NoteOverview">Notiz Übersicht</string>
    <string name="PictureOverview">Bilder überblick</string>
    <string name="TakePicture">Bild aufnehmen</string>
    <string name="Grades">Note</string>
    <string name="EnterNewGrade">Note eintragen</string>
    <string name="GradeOverview">Notenübersicht</string>
    <string name="NoExamEntered">Bislang keine Arbeit eingetragen</string>
    <string name="ExamAppointment">Klausurtermin</string>
    <string name="EnterGrade">Note eingeben</string>
    <string name="NameExists">Name existiert berreits</string>
    <string name="DeleteVocabList">Vokabelliste löschen?</string>
    <string name="DeleteVocabListConfirmation">Bist du sicher, dass du diese Vokabelliste löschen möchtest?</string>
    <string name="Publish">Veröffentlichen</string>
    <string name="PublishVocabList">Vokabelliste Veröffentlichen?</string>
    <string name="ConfirmPublication">Mit deiner Freigabe bestätigst du, dass du keine Rechte Dritter verletzt.</string>
    <string name="ConfirmUnPublication">Deine Vokabelliste verliert damit alle Follower und Bewertungen</string>
    <string name="SetPrivate">Auf Privat stellen</string>
    <string name="SetVocabularyListPrivaSte">Vokabelliste auf Privat stellen</string>
    <string name="SetListPrivate">Liste auf Privat Stellen</string>
    <string name="PublishList">Liste Veröffentlichen</string>
    <string name="Follow">Folgen</string>
    <string name="Followed">Gefolgt</string>
    <string name="AccesGranted">Zugriff gestattet!</string>
    <string name="AccessDenied">Zugriff Verweigert!</string>
    <string name="Certificate">Zeugnis</string>
    <string name="Presentations">Präsentationen</string>
    <string name="Rest">Rest</string>
    <string name="CertificatesOverview">Zeugnis Übersicht</string>
    <string name="NoCertificateEntered">Kein Zeugnis erstellt</string>
    <string name="PresentationOverview">Alle Präsentationen</string>
    <string name="CreateNewPresentation">Neue Präsentation erstellen</string>
    <string name="NoPresentationEntered">Noch keine Präsentation eingetragen</string>
    <string name="NoRecentEvents">Keine aktuellen termine</string>
    <string name="MultipleEvents">Mehrere Termine</string>
    <string name="Grade">Note:</string>
    <string name="AllVocabularys">Alle Vokbeln</string>
    <string name="Original">Original</string>
    <string name="Translation">Übersetzung</string>
    <string name="AllLists">Alle Listen</string>
    <string name="PublicVocabIDInfo1">"Diese Öffentliche Vokabelliste ist unter der ID: "</string>
    <string name="PublicVocabIDInfo2">" zu erreichen"</string>
    <string name="ReportList">Liste Melden</string>
    <string name="Rate">Bewerten</string>
    <string name="TrainingCondition">Es müssen mindestens 5 Vokabeln in der Vokabelliste vorhanden sein, um die Übung zu starten</string>
    <string name="PublicLists">Öffentliche Listen</string>
    <string name="ImportList">Liste Importieren</string>
    <string name="NewList">Neue Liste</string>
    <string name="NoListCreatedYet">Es wurde noch keine Vokabelliste erstellt</string>
    <string name="Train">Üben</string>
    <string name="FollowList">Liste Folgen</string>
    <string name="RateList">Liste Bewerten</string>
    <string name="Unskilled">Ungelernt</string>
    <string name="Learned">Gelernt</string>
    <string name="LanguageLanguage">Sprache - Sprache</string>
    <string name="OriginalTranslation">Original - Übersetzung</string>
    <string name="ShowTranslation">Übersetzung Anzeigen</string>
    <string name="PublicVocabLists">Öffentliche Vokabellisten</string>
    <string name="RecommendedVocabList">Empfohlene Vokabellisten</string>
    <string name="SearchVocabularyList">Vokabellisten Suchen</string>
    <string name="SearchConditions">Zum Suchen ID, Name, Ersteller, Titel oder Sprache eingeben</string>
    <string name="YourVocabularyList">Deine Vokabellisten</string>
    <string name="FollowedVocabLists">Gefolgte Vokabellisten</string>
    <string name="Language">Sprache</string>
    <string name="IWasRight">Ich lag Richtig</string>
    <string name="IWasWrong">Ich lag Falsch</string>
    <string name="NameOfVocabularylist">Name der Vokabelliste</string>
    <string name="NameOfLanguage1">Name von Sprache 1</string>
    <string name="NameOfLanguage2">Namee von Sprache 2</string>
    <string name="VocLang1">Vokabel: Sprache 1</string>
    <string name="VocLang2">Vokabel: Sprache 2</string>
    <string name="NextVocabulary">Nächste Vokabel</string>
    <string name="FinishVocabulary">Vokabelliste Fertigstellen</string>
    <string name="YesCancel">Ja, abbrechen</string>
    <string name="NoKeepEditing">Nein, weiter bearbeiten</string>
    <string name="CreateVocListCancelInfo">Alle soeben eingegebenen Vokabeln gehen dadurch Verloren</string>
    <string name="CancelQuestion">Abbrechen?</string>
    <string name="FinishQuestion">Fertigstellen?</string>
    <string name="CreateVocabularyListFinishInfo">Alle soeben eingegebenen Vokabeln werden gespeichert</string>
    <string name="YesFinish">Ja, Fertigstellen</string>
    <string name="VocListImportHeading">Vokabelliste aus CSV Datei Importieren</string>
    <string name="ChooseCSVFile">CSV - Datei Wählen</string>
</resources>